# aws-test

./: .gitignore  Cargo.toml
src/: main.rs
