[package]
name = "test_aws"
version = "0.1.0"
authors = ["me-abumuhammad <com.koloboot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.46.0"
rusoto_sqs = "0.46.0"
rusoto_s3 = "0.46.0"
rusoto_textract = "0.46.0"
rusoto_credential = "0.46.0"
tokio = "1.2.0"
image = "0.23.14"
base64 = "0.13.0"
bytes = "1.0.1"